--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="keyboard">
             <div class="button">C</div>
             <div class="button">%</div>
-            <div class="button">+/-</div>
+            <div class="button opposite">+/-</div>
             <div class="button">/</div>
             <div class="button">7</div>
             <div class="button">8</div>
@@ -38,7 +38,6 @@
             <div class="button">.</div>
             <div class="button">=</div>
         </div>
-        <script src="./functions.js"></script>
         <script src="./main.js"></script>
     </div>
 </body>
